image paths changed

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -85,11 +85,11 @@ jobs:
         run: |
              "AWS_ECR_LOGIN_URI: '${{ secrets.AWS_ECR_LOGIN_URI }}'"
               echo "ECR_REPOSITORY_NAME: '${{ secrets.ECR_REPOSITORY_NAME }}'"
-              echo "Full Image Name: '${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest'"
+              echo "Full Image Name: '${{ secrets.AWS_ECR_LOGIN_URI }}:latest'"
 
       - name: Pull latest images
         run: |
-         docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{secrets.ECR_REPOSITORY_NAME}}:latest
+         docker pull ${{secrets.AWS_ECR_LOGIN_URI}}:latest
 
       
        
