--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -88,9 +88,12 @@ jobs:
          docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{secrets.ECR_REPOSITORY_NAME}}:latest
 
       
-      - name: Stop and remove network container if running
+      - name: Stop & Remove Existing Container
         run: |
-         docker ps -q --filter "name=networksecurity" | grep -q . && docker stop networksecurity && docker rm -fv networksecurity
+           docker ps -q --filter "name=networksecurity" | grep -q . && docker stop networksecurity || true
+           docker ps -q --filter "name=networksecurity" | grep -q . && docker rm -fv networksecurity || true
+
+        
        
       - name: Run Docker Image to serve users
         run: |
